# cabrio

./: .gitignore  Makefile  Makefile.am  Makefile.mingw  README  README.md  Vagrantfile  bg.c  bootstrap.sh  build_libav_linux.sh  cabrio.desktop  cabrio.spec.in  category.c  config.c  configure.ac  control.c  emulator.c  event.c  focus.c  font.c  frame.c  game.c  game_sel.c  genre.c  hint.c  iface  image.c  key.c  location.c  lookup.c  main.c  media.c  menu.c  ogl.c  packet.c  platform.c  screenshot.c  sdl.c  sdl_ogl.c  sdl_wrapper.c  (+6 more)
.pc/FreeSans.ttf.patch/: config.c
build-aux/m4/: dolt.m4
data/themes/carousel/: theme.xml
data/themes/ice/: theme.xml
data/themes/industrial/: CREDITS  theme.xml
data/themes/lmc/: theme.xml
data/themes/wood/: theme.xml
debian/: cabrio.1  cabrio.manpages  changelog  control  copyright  dirs  rules
debian/patches/: FreeSans.ttf.patch  series
include/: bg.h  category.h  config.h  control.h  device.h  emulator.h  event.h  focus.h  font.h  frame.h  game.h  game_sel.h  genre.h  hint.h  image.h  key.h  location.h  lookup.h  media.h  menu.h  ogl.h  packet.h  platform.h  screenshot.h  sdl.h  sdl_ogl.h  sdl_wrapper.h  setup.h  snap.h  sound.h  submenu.h  video.h
puppet/manifests/: site.pp
puppet/modules/cabrio/manifests/: init.pp
sample_video_broken/: README.txt
src/: Makefile.am  bg.c  category.c  category.h  config.c  emulator.h  event.c  event.h  font.c  font.h  frame.c  frame.h  game.c  game.h  game_sel.c  hint.c  load_config.c  location.c  lookup.c  main.c  media.h  menu.c  ogl.c  ogl.h  packet.c  packet.h  platform.c  platform.h  sdl_ogl.c  sdl_wrapper.c  setup.c  snap.c  snap.h  sound.c  video.c  video.h
src/data/themes/industrial/: theme.xml
test/: Makefile.am  build_script  deb.build  debug.build  default_flags_to_configure.build  rpm.build  simple.build
